Fix storing/restoring the game time

If you pause the game, and later minimize, screen lock or change tasks, when you later return to the game, the timer jumps for the period between the pause and the minimize event.

BUG: 502749